# Hybrid-Quantum-Retrieval

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: ask.py  health.py  index.py  search.py
backend/app/core/: config.py  logging.py
backend/app/datasets/: __init__.py  arxiv.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/: models.py
backend/app/evaluation/: __init__.py  cli.py  dataset.py  fusion.py  metrics.py  models.py  retrievers.py  runner.py  statistics.py
backend/app/indexing/: __init__.py  document_indexer.py  models.py  repository.py
backend/app/quantum/: __init__.py  contextual_ranker.py  quantum_ranker.py
backend/app/rag/: __init__.py  generator.py  pipeline.py  retriever.py
backend/app/ranking/: quantum_ranker.py
backend/app/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py
backend/app/schemas/: ask.py  documents.py  search.py
backend/app/services/: ask.py  protocols.py  search.py  stubs.py
backend/scripts/: build_arxiv_indexes.py  quantum_ranking_demo.py  rag_pipeline_demo.py  retrieval_demo.py
backend/tests/: retrieval_fakes.py  test_api.py  test_arxiv_dataset.py  test_bm25_retriever.py  test_contextual_ranker.py  test_dense_retriever.py  test_document_indexer.py  test_evaluation_dataset.py  test_evaluation_fusion.py  test_evaluation_metrics.py  test_hybrid.py  test_quantum_ranker.py  test_rag_generator.py  test_rag_pipeline.py  test_rag_retriever.py
(+35 files in other folders)
