[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hybrid-quantum-search-api"
version = "0.1.0"
description = "Hybrid quantum-classical retrieval and RAG API"
requires-python = ">=3.11,<3.14"
dependencies = [
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "numpy>=2.0,<3",
    "pgvector>=0.3,<1",
    "pydantic-settings>=2.7,<3",
    "python-json-logger>=3.2,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
retrieval = [
    "faiss-cpu>=1.9,<2",
    "sentence-transformers>=3.3,<4",
]
benchmark = [
    "faiss-cpu>=1.9,<2",
    "rank-bm25>=0.2.2,<1",
    "sentence-transformers>=3.3,<4",
]
rag = [
    "langchain>=1,<2",
    "langchain-ollama>=1,<2",
    "langchain-openai>=1,<2",
]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
]

[project.scripts]
hybrid-search-benchmark = "app.evaluation.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
